<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLayot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ilya.organizer.AddNote">

    <ScrollView
        android:id="@+id/addScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header"
                android:hint="@string/header"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/remind_check"
                android:id="@+id/check" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:visibility="gone"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timePicker"
                android:visibility="gone"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:id="@+id/noteText"
                android:hint="@string/text"/>

            <Button
                android:id="@+id/addButton"
                android:text="@string/add"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteButton"
                android:text="@string/delete"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textStyle="bold"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
